fix navbar on mobile

--- a/public/main.sass
+++ b/public/main.sass
@@ -151,7 +151,7 @@ h1
 
 .logo
     @media (max-width: 500px) 
-        width: 50%
+        width: 30%
 
 // button
 .btn
@@ -406,14 +406,15 @@ img
     .spacer
         height: 80px
     .logo
-        width: 40%
+        width: 30%
     .nav-inner
         display: none
     .nav
         .hamburger-menu
-            width: 10%
+            width: 5%
         &.fixed
-            background-color: rgba(0, 0, 0, 0.88) 
+            background-color: rgba(0, 0, 0, 0.88)
+            height: 50px
     .section
         height: 150px
     .display-text-2
@@ -431,8 +432,9 @@ img
         font-size: 16px
     p
         margin-bottom: 0px
-    .vertical-center
+    .hero.vertical-center
         background-color: transparent
+
     .btn
         &.full-on-mobile
             // width: 100%
